--- a/static/css/common.css
+++ b/static/css/common.css
@@ -55,4 +55,6 @@ body,.weekly-home-content { position:relative; }
 .question{
     padding-bottom: 20px !important;
 }
-
+.simditor-clean-paste-area{
+    display:none;
+}
